[package]
name = "chrono-english"
version = "0.1.8"
authors = ["steve donovan <steve.j.donovan@gmail.com>"]

description = "parses simple English dates, inspired by Linux date command"

documentation = "https://docs.rs/chrono-english"
repository = "https://github.com/stevedonovan/chrono-english.git"

readme = "readme.md"

license="MIT"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
scanlex = "0.1.2"

[dev-dependencies]
chrono = { version = "0.4", default-features = false, features = ["alloc", "clock"] }
lapp = "0.3"
